@@ -1,4 +1,8 @@
-2006-02-08 Peter Bienstman  <Peter.Bienstman@UGent.be>
+2006-02-10 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+        * slabmode.cpp: Don't add PML twice.
+
+2006-02-09 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
         * slab.cpp: Improve detection of bad estimates.
 
